--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,14 @@ a {
 * {
   box-sizing: border-box;
 }
+
+h1 {
+  text-align: center;
+  font-size: 3vh;
+}
+
+h3 {
+  text-align: center;
+  margin: 0;
+  font-size: 1.5vh;
+}
